--- a/RecyclerListApp/app/src/main/res/values/strings.xml
+++ b/RecyclerListApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RecyclerListApp</string>
     <string name="action_settings">Settings</string>
+    <string name="description">Description</string>
 </resources>
