--- a/IntentAplication/app/src/main/res/values/strings.xml
+++ b/IntentAplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">IntentAplication</string>
     <string name="action_settings">Settings</string>
+    <string name="title_person_list">People</string>
+    <string name="title_person_detail">Person Detail</string>
 </resources>
